--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+2014-11-23 v0.5.5
+  (updated) language files from Transifex
+  (updated) textures/KodiOS: update images
+
 2014-11-21 v0.5.4
   (fix) context menu background image
 
