update language files from Transifex, bump version
Signed-off-by: Stephan Raue <stephan@openelec.tv>

--- a/language/Tamil (India)/strings.po
+++ b/language/Tamil (India)/strings.po
@@ -9,141 +9,125 @@ msgstr ""
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: Kodi Translation Team\n"
-"Language-Team: Macedonian (http://www.transifex.com/projects/p/xbmc-addons/language/mk/)\n"
+"Language-Team: Tamil (India) (http://www.transifex.com/projects/p/xbmc-addons/language/ta_IN/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: mk\n"
-"Plural-Forms: nplurals=2; plural=(n % 10 == 1 && n % 100 != 11) ? 0 : 1;\n"
+"Language: ta_IN\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 msgctxt "#602"
 msgid "Address"
-msgstr "Адреса"
+msgstr "முகவரி"
 
 msgctxt "#603"
 msgid "Type"
-msgstr "Тип"
+msgstr "வகை:"
 
 msgctxt "#604"
 msgid "State"
-msgstr "Држава"
+msgstr "மாநிலம்"
 
 msgctxt "#605"
 msgid "Address"
-msgstr "Адреса"
+msgstr "முகவரி"
 
 msgctxt "#32000"
 msgid "Network"
-msgstr "Мрежа"
+msgstr "பிணையம்"
 
 msgctxt "#32001"
 msgid "Services"
-msgstr "Избор на сервис"
+msgstr "சேவைகள்"
 
 msgctxt "#32002"
 msgid "System"
-msgstr "Систем"
+msgstr "கணினி"
 
 msgctxt "#32005"
 msgid "Type"
-msgstr "Тип"
+msgstr "வகை:"
 
 msgctxt "#32006"
 msgid "State"
-msgstr "Држава"
-
-msgctxt "#32009"
-msgid "Keyboard"
-msgstr "Тастатура"
+msgstr "மாநிலம்"
 
 msgctxt "#32101"
 msgid "Network"
-msgstr "Мрежа"
+msgstr "பிணையம்"
 
 msgctxt "#32106"
 msgid "Username"
-msgstr "Корисничко име"
+msgstr "பயனர்பெயர்"
 
 msgctxt "#32110"
 msgid "Connection"
-msgstr "Конекција"
+msgstr "இணைப்பு"
 
 msgctxt "#32140"
 msgid "Save"
-msgstr "Сочувај"
+msgstr "பதிவுசெய்"
 
 msgctxt "#32141"
 msgid "Delete"
-msgstr "Избриши"
+msgstr "நீக்கு"
 
 msgctxt "#32142"
 msgid "Refresh"
-msgstr "Освежи"
+msgstr "புதுப்பி"
 
 msgctxt "#32145"
 msgid "Unable to connect"
-msgstr "Не е можно поврзување"
+msgstr "இணைக்க முடியவில்லை"
 
 msgctxt "#32150"
 msgid "Edit"
-msgstr "Уреди"
+msgstr "திருத்து"
 
 msgctxt "#32168"
 msgid "Port"
-msgstr "Приклучок"
+msgstr "துறை"
 
 msgctxt "#32191"
 msgid "Error"
-msgstr "Грешка"
-
-msgctxt "#32193"
-msgid "Service"
-msgstr "Сервис"
-
-msgctxt "#32200"
-msgid "Samba"
-msgstr "Samba"
-
-msgctxt "#32201"
-msgid "SSH"
-msgstr "SSH"
+msgstr "பிழை"
 
 msgctxt "#32212"
 msgid "Cancel"
-msgstr "Откажи"
+msgstr "இரத்துக"
 
 msgctxt "#32213"
 msgid "Exit"
-msgstr "Излези од"
+msgstr "வெளியேறு"
 
 msgctxt "#32303"
 msgid "Next"
-msgstr "Следно"
-
-msgctxt "#32315"
-msgid "disabled"
-msgstr "исклучено"
+msgstr "அடுத்து"
 
 msgctxt "#32326"
 msgid "Are you sure?"
-msgstr "Да ли сте сигурни?"
+msgstr "நீங்கள் உறுதியாக இருக்கிறீர்களா?"
 
 msgctxt "#32332"
 msgid "Address"
-msgstr "Адреса"
+msgstr "முகவரி"
 
 msgctxt "#32334"
 msgid "Yes"
-msgstr "Да"
+msgstr "ஆம்"
 
 msgctxt "#32335"
 msgid "No"
-msgstr "Не"
+msgstr "இல்லை"
 
 msgctxt "#32364"
 msgid "Update available"
-msgstr "Достапно е ажурирање"
+msgstr "புதுப்பி உள்ளது"
+
+msgctxt "#32371"
+msgid "Backup"
+msgstr "மறுபிரதி"
 
 msgctxt "#32382"
 msgid "Speed"
-msgstr "Брзина"
+msgstr "வேகமாக"
