bluetooth: fix 'no adapter found' UX error when bt service disabled
it should be clear whether there is no bt hardware
or bluez is not runing..

--- a/language/English/strings.po
+++ b/language/English/strings.po
@@ -725,7 +725,7 @@ msgstr ""
 #empty string with id 32345
 
 msgctxt "#32346"
-msgid "Bluetooth is disabled"
+msgid "Bluetooth service is disabled"
 msgstr ""
 
 #empty strings from id 32347 to 32357
