--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+2015-02-13 v@ADDONVERSION@
+  (updated) language files from Transifex
+
 2015-01-30 v0.6.2
   (change) use xbmcgui.Dialog instead of our custom dialogs
 
