--- a/language/Asturian/strings.po
+++ b/language/Asturian/strings.po
@@ -9,53 +9,41 @@ msgstr ""
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: Kodi Translation Team\n"
-"Language-Team: Mongolian (Mongolia) (http://www.transifex.com/projects/p/xbmc-addons/language/mn_MN/)\n"
+"Language-Team: Asturian (http://www.transifex.com/projects/p/xbmc-addons/language/ast/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: mn_MN\n"
+"Language: ast\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-
-msgctxt "#32001"
-msgid "Services"
-msgstr "Үйлчилгээ"
-
-msgctxt "#32011"
-msgid "Language"
-msgstr "Хэл"
-
-msgctxt "#32106"
-msgid "Username"
-msgstr "Хэрэглэгчийн нэр"
 
 msgctxt "#32140"
 msgid "Save"
-msgstr "Хадгалах"
+msgstr "Guardar"
 
 msgctxt "#32141"
 msgid "Delete"
-msgstr "Устгах"
+msgstr "Desaniciar"
 
 msgctxt "#32142"
 msgid "Refresh"
-msgstr "Сэргээх"
+msgstr "Refrescar"
 
 msgctxt "#32212"
 msgid "Cancel"
-msgstr "Цуцлах"
+msgstr "Encaboxar"
 
 msgctxt "#32303"
 msgid "Next"
-msgstr "Дараах"
+msgstr "Siguiente"
 
 msgctxt "#32334"
 msgid "Yes"
-msgstr "Тийм"
+msgstr "Sí"
 
 msgctxt "#32335"
 msgid "No"
-msgstr "Үгүй"
+msgstr "Non"
 
 msgctxt "#32382"
 msgid "Speed"
-msgstr "Хурд"
+msgstr "Velocidá"
