--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+2016-02-28 v0.6.12
+  (fix) Correctly restore backups from a location other than default backup location
+
 2016-01-26 v0.6.11
   (fix) update abort
 
