--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+2016-04-26 v0.6.13
+  (fix) remove hardcoded color value from python
+  (fix) update skin xml files to have unique service name
+
 2016-02-28 v0.6.12
   (fix) Correctly restore backups from a location other than default backup location
 
