--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+2016-04-30 v0.8.0
+   (updated) update to new theme (kodi estuary)
+
 2016-04-26 v0.6.13
   (fix) remove hardcoded color value from python
   (fix) update skin xml files to have unique service name
